Fix some UI bugs, including making the top bar stick correctly on mobile.

--- a/RaceResultsBlazor.App/Shared/MainLayout.razor.css
+++ b/RaceResultsBlazor.App/Shared/MainLayout.razor.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow: auto;
 }
 
 .main {
@@ -16,6 +17,8 @@
 .sidebar {
     background-image: linear-gradient(180deg, var(--primary-dark) 0%, var(--primary-default) 80%);
     z-index: 5001;
+    position: sticky;
+    left: 0px;
 }
 
 .top-row {
